--- a/src/html/navbar.html
+++ b/src/html/navbar.html
@@ -44,7 +44,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body justify-content-center">
-        <form id="loginForm" method="post" action="../php/prova.php">
+        <form id="loginForm" method="post" action="../php/signin.php">
         
         <div class="input-group mb-4 mt-3">
             <span class="input-group-text" id="usernameLoginAO">@</span>
@@ -78,7 +78,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
-        <form id="registerForm" method="post" action="../php/connect.php">
+        <form id="registerForm" method="post" action="../php/signup.php">
         <div class="row mb-3 mt-2">
             <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">@</span>
@@ -106,7 +106,7 @@
             </div>
             
             <div class="mb-2 mt-1">
-            <button type="submit" class="btn btn-register">Registati</button>
+            <button type="submit" class="btn btn-register" id="submit">Registati</button>
             </div>
 
         </div>
