fix path of frontend

--- a/src/html/navbar.html
+++ b/src/html/navbar.html
@@ -1,7 +1,7 @@
 <!--Navbar-->
 <nav class="navbar navbar-inverse navbar-dark navbar-expand-lg fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="localhost/LTW_Project/index.html">
+        <a class="navbar-brand" href="index.html">
         <img src="../../public/assets/images/logo.svg" alt="Logo" width="130" height="" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -14,14 +14,14 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-                <a class="nav-link" id="homenavitem" aria-current="page" href="../../index.html">Home</a>
+                <a class="nav-link" id="homenavitem" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="recordnavitem" href="/src/html/record.html">Record</a>
+                <a class="nav-link" id="recordnavitem" href="record.html">Record</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" id="regolamentonavitem" href="../../src/html/regolamento.html">Regolamento</a>
+                <a class="nav-link" id="regolamentonavitem" href="regolamento.html">Regolamento</a>
             </li>
 
 
@@ -44,7 +44,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body justify-content-center">
-        <form id="loginForm" method="post" action="../../src/php/prova.php">
+        <form id="loginForm" method="post" action="../php/prova.php">
         
         <div class="input-group mb-4 mt-3">
             <span class="input-group-text" id="usernameLoginAO">@</span>
@@ -78,7 +78,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
-        <form id="registerForm" method="POST" action="../../src/php/contact.php">
+        <form id="registerForm" method="POST" action="../php/contact.php">
         <div class="row mb-3 mt-2">
             <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">@</span>
@@ -121,6 +121,6 @@
 </div>
 </div>
 
-<script src="../../src/javascript/formValidation.js"></script>
+<script src="../javascript/formValidation.js"></script>
 
-<script src="../../src/javascript/activeElement.js"></script>
+<script src="../javascript/activeElement.js"></script>
