--- a/src/html/record.html
+++ b/src/html/record.html
@@ -27,7 +27,7 @@
         <span class="visually-hidden">Loading...</span>
       </div>
     </div>
-    <script src="../spinnerLoader.js"></script>
+    <script src="../javascript/spinnerLoader.js"></script>
 
 
     <div id="navigationbar"></div>
@@ -48,7 +48,7 @@
 
     <div id="mainContain" class="containAll">
       
-      <script type="module" src="../Starspace.js"></script>
+      <script type="module" src="../javascript/Starspace.js"></script>
 
       <h1 class="pagetitle">Record</h1>
 
