--- a/src/html/regolamento.html
+++ b/src/html/regolamento.html
@@ -26,7 +26,7 @@
       <span class="visually-hidden">Loading...</span>
     </div>
   </div>
-  <script src="../spinnerLoader.js"></script>
+  <script src="../javascript/spinnerLoader.js"></script>
 
   <div id="navigationbar"></div>
   <script> 
@@ -44,7 +44,7 @@
   </script>
 
   <div id="mainContain" class="containAll">
-    <script type="module" src="../Starspace.js"></script>
+    <script type="module" src="../javascript/Starspace.js"></script>
     <h1 class="pagetitle">Regolamento</h1>
   </div>
     
