--- a/src/html/game.html
+++ b/src/html/game.html
@@ -9,7 +9,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <title>Earth Defender - Play</title>
     <link rel="shortcut icon" href="#" />
-    <link rel="stylesheet" href="../style/game.css"/>
+    <link rel="stylesheet" href="../../style/game.css"/>
 
   </head>
   <body>
@@ -34,24 +34,24 @@
       <div class="row">
         <div class="col">
           Vite:
-            <img id="heart1" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
-            <img id="heart2" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
-            <img id="heart3" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
+            <img id="heart1" src="../../public/assets/images/pixel_heart.png" width="20px" height="20px">
+            <img id="heart2" src="../../public/assets/images/pixel_heart.png" width="20px" height="20px">
+            <img id="heart3" src="../../public/assets/images/pixel_heart.png" width="20px" height="20px">
           </span>
         </div>
         <div class="col">
           Enemy Life:
-          <img id="enemy1" src="../public/assets/images/penemy1.png" width="20px" height="20px">
+          <img id="enemy1" src="../../public/assets/images/penemy1.png" width="20px" height="20px">
           <span class="lifeSpan1" id="lifeSpan1ID"></span>
-          <img id="enemy2" src="../public/assets/images/penemy2.png" width="20px" height="20px">
+          <img id="enemy2" src="../../public/assets/images/penemy2.png" width="20px" height="20px">
           <span class="lifeSpan2" id="lifeSpan2ID"></span>
-          <img id="enemy3" src="../public/assets/images/penemy3.png" width="20px" height="20px">
+          <img id="enemy3" src="../../public/assets/images/penemy3.png" width="20px" height="20px">
           <span class="lifeSpan3" id="lifeSpan3ID"></span>
         </div>
       </div>
       </div>
         <canvas id="game"></canvas>
-        <script type="module" src="game.js"></script>
+        <script type="module" src="../javascript/game.js"></script>
         <!-- Game Over -->
         <div class="gameOver" id="gameOverID" style="visibility: hidden;">
           <h1>Game Over</h1>
@@ -59,7 +59,5 @@
         </div>
       </div>
     </div>
-
-    <!-- <script type="module" src="Starspace.js"></script> -->
   </body>
 </html>
