fix query record table

--- a/src/php/game.html
+++ b/src/php/game.html
@@ -52,12 +52,12 @@
       </div>
         <canvas id="game"></canvas>
         <script type="module" src="../javascript/game.js"></script>
-        <!-- Game Over -->
-        <div class="gameOver" id="gameOverID" style="visibility: hidden;">
-          <h1>Game Over</h1>
-          <button type="button" class="btn btn-danger" id="restartButton" style="visibility: hidden;"> Restart </button>
-        </div>
       </div>
     </div>
+      <!-- Game Over
+      <div class="gameOver" id="gameOverID" style="visibility: visible; poisition: fixed; top: 0; left:0; width: 100vh; height: 100vh; z-index: 100; ">
+        <h1>Game Over</h1>
+        <button type="button" class="btn btn-danger" id="restartButton" style="visibility: hidden;"> Restart </button>
+      </div> -->
   </body>
 </html>
